Add controller params