@@ -27,7 +27,6 @@
  */
 package org.hisp.dhis.common;
 
-import static java.util.Collections.singleton;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -37,7 +36,6 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -447,9 +445,9 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementC );
         idObjectManager.save( dataElementD );
         List<DataElement> ab = idObjectManager.getByUid( DataElement.class,
-            Arrays.asList( dataElementA.getUid(), dataElementB.getUid() ) );
+            List.of( dataElementA.getUid(), dataElementB.getUid() ) );
         List<DataElement> cd = idObjectManager.getByUid( DataElement.class,
-            Arrays.asList( dataElementC.getUid(), dataElementD.getUid() ) );
+            List.of( dataElementC.getUid(), dataElementD.getUid() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
@@ -458,6 +456,15 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         assertFalse( cd.contains( dataElementB ) );
         assertTrue( cd.contains( dataElementC ) );
         assertTrue( cd.contains( dataElementD ) );
+    }
+
+    @Test
+    void getByUidWithNull()
+    {
+        List<DataElement> objects = idObjectManager.getByUid( DataElement.class, null );
+
+        assertNotNull( objects );
+        assertTrue( objects.isEmpty() );
     }
 
     @Test
@@ -470,7 +477,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementB );
         idObjectManager.save( dataElementC );
         List<DataElement> ab = idObjectManager.getAndValidateByUid( DataElement.class,
-            Arrays.asList( dataElementA.getUid(), dataElementB.getUid() ) );
+            List.of( dataElementA.getUid(), dataElementB.getUid() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
@@ -498,10 +505,10 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementB );
         idObjectManager.save( dataElementC );
         idObjectManager.save( dataElementD );
-        List<String> uids = Arrays.asList( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
+        List<String> uids = List.of( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
             dataElementD.getUid() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
             idObjectManager.getOrdered( DataElement.class, IdScheme.UID, uids ) );
         assertEquals( expected, actual );
@@ -518,10 +525,10 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementB );
         idObjectManager.save( dataElementC );
         idObjectManager.save( dataElementD );
-        List<String> codes = Arrays.asList( dataElementA.getCode(), dataElementC.getCode(), dataElementB.getCode(),
+        List<String> codes = List.of( dataElementA.getCode(), dataElementC.getCode(), dataElementB.getCode(),
             dataElementD.getCode() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
             idObjectManager.getOrdered( DataElement.class, IdScheme.CODE, codes ) );
         assertEquals( expected, actual );
@@ -538,10 +545,10 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementB );
         idObjectManager.save( dataElementC );
         idObjectManager.save( dataElementD );
-        List<String> uids = Arrays.asList( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
+        List<String> uids = List.of( dataElementA.getUid(), dataElementC.getUid(), dataElementB.getUid(),
             dataElementD.getUid() );
         List<DataElement> expected = new ArrayList<>(
-            Arrays.asList( dataElementA, dataElementC, dataElementB, dataElementD ) );
+            List.of( dataElementA, dataElementC, dataElementB, dataElementD ) );
         List<DataElement> actual = new ArrayList<>(
             idObjectManager.getByUidOrdered( DataElement.class, uids ) );
         assertEquals( expected, actual );
@@ -563,9 +570,9 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         idObjectManager.save( dataElementC );
         idObjectManager.save( dataElementD );
         List<DataElement> ab = idObjectManager.getByCode( DataElement.class,
-            Arrays.asList( dataElementA.getCode(), dataElementB.getCode() ) );
+            List.of( dataElementA.getCode(), dataElementB.getCode() ) );
         List<DataElement> cd = idObjectManager.getByCode( DataElement.class,
-            Arrays.asList( dataElementC.getCode(), dataElementD.getCode() ) );
+            List.of( dataElementC.getCode(), dataElementD.getCode() ) );
         assertTrue( ab.contains( dataElementA ) );
         assertTrue( ab.contains( dataElementB ) );
         assertFalse( ab.contains( dataElementC ) );
@@ -638,7 +645,7 @@ class IdentifiableObjectManagerTest extends TransactionalIntegrationTest
         String userGroupUid = userGroupA.getUid();
         DataElement de = createDataElement( 'A' );
         Sharing sharing = new Sharing();
-        sharing.setUserGroupAccess( singleton( new UserGroupAccess( "rw------", userGroupA.getUid() ) ) );
+        sharing.setUserGroupAccess( Set.of( new UserGroupAccess( "rw------", userGroupA.getUid() ) ) );
         de.setSharing( sharing );
         idObjectManager.save( de, false );
         de = idObjectManager.get( de.getUid() );
